2003-12-26  Paolo Nenzi <p.nenzi@ieee.org>

	* src/spicelibe/devices/jfet/*: Added parallel multiplier and
	  "dtemp" parameter.
	
	* DEVICES: Updated jfet status
	
	* tests/jfet, tests/jfet/jfet_vds-vgs.cir: added jfet directory 
	  and one netlist.

2003-12-24  Paolo Nenzi <p.nenzi@ieee.org>

	* src/maths/cmaths/cmath4.c: Applied
	Vera Albrecht patch to enable interpolate
	function.
	
	* src/frontend/{come_let.c, control.c, evaluate.c, outitf.c, parse.c},
	  src/frontend/parser/lexical.c: Applied Vera Albrecht patch that
	  fixes ngspice bugs in its control language (c shell). 

2003-12-08  Paolo Nenzi <p.nenzi@ieee.org>

	* src/spicelib/devices/mos9/*: Added 
          "dtemp" parameters.

        * DEVICES: Updated MOS9 status. 

2003-12-08  Paolo Nenzi <p.nenzi@ieee.org>

	* src/spicelib/devices/mos6/*: Added "m"
          "dtemp" parameters.

        * DEVICES: Updated MOS6 status. 

2003-11-22  Paolo Nenzi <p.nenzi@ieee.org>

	* src/spicelib/devices/bsim2/*: Added "m" 
	  parameter and noise routine. 
	
	* DEVICES: Updated file with bsim2 changes.  

2003-11-21  Paolo Nenzi <p.nenzi@ieee.org>

	* src/spicelib/devices/bsim1/*: Added "m" 
	  parameter and noise routine. 
	
	* DEVICES: Updated file with bsim1 changes.  

2003-11-12  Paolo Nenzi <p.nenzi@ieee.org>

	* src/spicelib/devices/mos2/*: Added "dtemp"
	  parameter.
	
	* src/spicelib/devices/mos3/*: Added "dtemp"
	  parameter.  
	  
	* DEVICES: updated file.  

2003-11-11  Paolo Nenzi <p.nenzi@ieee.org>

	* src/spicelib/devices/mos1/*: Added "dtemp"
	  parameter.
	  
	* DEVICES: Updated MOS1 status.  

2003-11-02  Paolo Nenzi <p.nenzi@ieee.org>
	
	* doc/ngspice.texi: updated documentation.

2003-10-29  Paolo Nenzi <p.nenzi@ieee.org>

	* src/spicelib/devices/bjt2/*: Enhanced bjt level 2
	  model adding dtemp, parallel mutliplier "m" and 
	  support for CIDER multiprocessor compilation.
	  
	* DEVICES: Updated status of Diode and BJT's.  

2003-10-26  Paolo Nenzi <p.nenzi@ieee.org>
